# Framework

./: .gitignore  CMakeLists.txt  README.md
doc/: framework_diagram.graphml
headers/: block.h  config.h  core.h  enemy.h  entity.h  entityanimation.h  myscene.h  player.h  scene.h  sword.h
libs/raylib/.github/workflows/: parse.yml
libs/raylib/src/: raylib.h  rtextures.c
src/: block.cpp  block.h  cameraF.cpp  cameraF.h  config.h  core.cpp  core.h  enemy.cpp  entity.cpp  entity.h  entityanimation.cpp  main.cpp  myscene.cpp  myscene.h  player.cpp  player.h  scene.cpp  scene.h  sword.cpp
